--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,7 @@ docopt==0.4.0
 flask-lesscss==0.9.1
 gunicorn==19.1.1
 itsdangerous==0.24
+pubnub==3.7.1
+pycrypto==2.6.1
 requests==2.4.3
 wsgiref==0.1.2
